--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
 
         <div class="card pad">
           <div class="kicker">Secure Inquiry Form</div>
-          <form onsubmit="event.preventDefault(); alert('Prototype only — form submission disabled.');">
+          <form onsubmit="event.preventDefault(); alert( ' Thank you. Your inquiry has been received and will be reviewed.');">
             <label>Name</label>
             <input placeholder="Full name" />
             <label>Organization</label>
