--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
           <div class="kicker">Office</div>
           <h3>Two Datran Center</h3>
           <p style="margin-top:10px" class="muted">
-            9130 South Dadeland Blvd.<br/>Miami, FL 33156<br/>United States
+            9130 South Dadeland Blvd.<br/> Suite 1902<br/> Miami, FL 33156<br/>United States
           </p>
           <div class="rule"></div>
           <div class="kicker">Email</div>
@@ -824,7 +824,7 @@
         <div class="inner">
           <div>
             <div class="kicker">Tier One Global</div>
-            <div class="small">Two Datran Center • 9130 South Dadeland Blvd. • Miami, FL</div>
+            <div class="small">Two Datran Center • 9130 South Dadeland Blvd. •  Suite 1902  • Miami, FL</div>
           </div>
           <div style="display:flex; gap:14px; flex-wrap:wrap">
             <a class="small" href="#/home">Home</a>
