--- a/index.html
+++ b/index.html
@@ -519,6 +519,8 @@ p{ color: rgba(17,17,17,.72); font-weight: 300; }
   <main class="wrap">
     <!-- HOME -->
     <section class="page" id="page-home" data-page="home">
+      <div class="band dark">
+  <div class="wrap">
       <div class="grid two">
         <div class="card pad">
           <div class="kicker">Institutional Overview</div>
@@ -563,6 +565,9 @@ p{ color: rgba(17,17,17,.72); font-weight: 300; }
             </div>
           </div>
         </div>
+        </div>
+    <div class="band light">
+  <div class="wrap">
 
         <div class="heroVisual" aria-label="Hero Visual">
           <div class="gridlines"></div>
@@ -604,6 +609,10 @@ p{ color: rgba(17,17,17,.72); font-weight: 300; }
           </div>
         </div>
       </div>
+        </div>  <!-- closes .wrap -->
+</div>    <!-- closes .band light -->
+         </div>
+</div> 
     </section>
 
     <!-- ABOUT -->
